--- a/data/data-clean.ipynb
+++ b/data/data-clean.ipynb
@@ -182,6 +182,415 @@
    "source": [
     "filtered_df.to_file(\"pipplo_range_filter.geojson\", driver='GeoJSON')"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b3a30457",
+   "metadata": {},
+   "source": [
+    "Data Source: [Hurricane Sandy Damage Estimates by Block Group, 2012](https://earthworks.stanford.edu/catalog/stanford-jp095bg5089)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "1aa502de",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sandy_damage = gpd.read_file(\"sandy-damage.zip\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "e5ccb401",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>OBJECTID</th>\n",
+       "      <th>GEOID</th>\n",
+       "      <th>Total_regi</th>\n",
+       "      <th>total_dmg</th>\n",
+       "      <th>No_inspect</th>\n",
+       "      <th>non_flood_</th>\n",
+       "      <th>FL_B_lt_2</th>\n",
+       "      <th>FL_B_ge_2</th>\n",
+       "      <th>FL_LT_1</th>\n",
+       "      <th>FL_1_to_4</th>\n",
+       "      <th>...</th>\n",
+       "      <th>dmg_o_miss</th>\n",
+       "      <th>dmg_r_sf</th>\n",
+       "      <th>dmg_r_mf</th>\n",
+       "      <th>dmg_r_miss</th>\n",
+       "      <th>dmg_o_ni</th>\n",
+       "      <th>dmg_o_ins</th>\n",
+       "      <th>C_tot_hsg</th>\n",
+       "      <th>C_vac_sea</th>\n",
+       "      <th>pct_dmg_ns</th>\n",
+       "      <th>geometry</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1001</td>\n",
+       "      <td>090091511001</td>\n",
+       "      <td>18</td>\n",
+       "      <td>11</td>\n",
+       "      <td>7</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>5</td>\n",
+       "      <td>1</td>\n",
+       "      <td>4</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>7</td>\n",
+       "      <td>337</td>\n",
+       "      <td>43</td>\n",
+       "      <td>3.7</td>\n",
+       "      <td>POLYGON ((-72.98672 41.23542, -72.98659 41.235...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1002</td>\n",
+       "      <td>090091550003</td>\n",
+       "      <td>13</td>\n",
+       "      <td>10</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>5</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>4</td>\n",
+       "      <td>447</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2.2</td>\n",
+       "      <td>POLYGON ((-72.94220 41.26352, -72.94411 41.263...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1003</td>\n",
+       "      <td>090010805001</td>\n",
+       "      <td>26</td>\n",
+       "      <td>13</td>\n",
+       "      <td>13</td>\n",
+       "      <td>4</td>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>5</td>\n",
+       "      <td>8</td>\n",
+       "      <td>768</td>\n",
+       "      <td>12</td>\n",
+       "      <td>1.7</td>\n",
+       "      <td>POLYGON ((-73.15531 41.15865, -73.15557 41.158...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1004</td>\n",
+       "      <td>090091505003</td>\n",
+       "      <td>100</td>\n",
+       "      <td>75</td>\n",
+       "      <td>25</td>\n",
+       "      <td>2</td>\n",
+       "      <td>7</td>\n",
+       "      <td>25</td>\n",
+       "      <td>9</td>\n",
+       "      <td>28</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>11</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>26</td>\n",
+       "      <td>38</td>\n",
+       "      <td>424</td>\n",
+       "      <td>52</td>\n",
+       "      <td>20.2</td>\n",
+       "      <td>MULTIPOLYGON (((-73.10873 41.19009, -73.10768 ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1005</td>\n",
+       "      <td>090091510004</td>\n",
+       "      <td>77</td>\n",
+       "      <td>63</td>\n",
+       "      <td>14</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>17</td>\n",
+       "      <td>11</td>\n",
+       "      <td>24</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>7</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>7</td>\n",
+       "      <td>49</td>\n",
+       "      <td>436</td>\n",
+       "      <td>11</td>\n",
+       "      <td>14.8</td>\n",
+       "      <td>POLYGON ((-73.01622 41.20917, -73.01575 41.208...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 23 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   OBJECTID         GEOID  Total_regi  total_dmg  No_inspect  non_flood_  \\\n",
+       "0      1001  090091511001          18         11           7           0   \n",
+       "1      1002  090091550003          13         10           3           1   \n",
+       "2      1003  090010805001          26         13          13           4   \n",
+       "3      1004  090091505003         100         75          25           2   \n",
+       "4      1005  090091510004          77         63          14           0   \n",
+       "\n",
+       "   FL_B_lt_2  FL_B_ge_2  FL_LT_1  FL_1_to_4  ...  dmg_o_miss  dmg_r_sf  \\\n",
+       "0          0          5        1          4  ...           0         3   \n",
+       "1          1          3        3          2  ...           0         0   \n",
+       "2          3          3        0          3  ...           0         0   \n",
+       "3          7         25        9         28  ...           0        11   \n",
+       "4          1         17       11         24  ...           0         7   \n",
+       "\n",
+       "   dmg_r_mf  dmg_r_miss  dmg_o_ni  dmg_o_ins  C_tot_hsg  C_vac_sea  \\\n",
+       "0         0           0         1          7        337         43   \n",
+       "1         5           0         1          4        447          0   \n",
+       "2         0           0         5          8        768         12   \n",
+       "3         0           0        26         38        424         52   \n",
+       "4         0           0         7         49        436         11   \n",
+       "\n",
+       "   pct_dmg_ns                                           geometry  \n",
+       "0         3.7  POLYGON ((-72.98672 41.23542, -72.98659 41.235...  \n",
+       "1         2.2  POLYGON ((-72.94220 41.26352, -72.94411 41.263...  \n",
+       "2         1.7  POLYGON ((-73.15531 41.15865, -73.15557 41.158...  \n",
+       "3        20.2  MULTIPOLYGON (((-73.10873 41.19009, -73.10768 ...  \n",
+       "4        14.8  POLYGON ((-73.01622 41.20917, -73.01575 41.208...  \n",
+       "\n",
+       "[5 rows x 23 columns]"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sandy_damage.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "60a325e2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "count    1827.000000\n",
+       "mean      103.108922\n",
+       "std       140.575693\n",
+       "min        10.000000\n",
+       "25%        14.000000\n",
+       "50%        34.000000\n",
+       "75%       139.500000\n",
+       "max       975.000000\n",
+       "Name: total_dmg, dtype: float64"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sandy_damage.total_dmg.describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "389a1fec",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sandy_damage.to_file(\"sandy_damage.geojson\", driver='GeoJSON')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "343c5615",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "damage2 = gpd.read_file(\"CBRS-Sandy-Batch-2-Proposed-2018-12-18_0.zip\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "321de3a9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Id</th>\n",
+       "      <th>Unit</th>\n",
+       "      <th>Name</th>\n",
+       "      <th>Unit_Type</th>\n",
+       "      <th>geometry</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>D09P</td>\n",
+       "      <td>Block Island</td>\n",
+       "      <td>Otherwise Protected Area</td>\n",
+       "      <td>POLYGON ((-7969337.924 5043713.067, -7968039.5...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0</td>\n",
+       "      <td>D09</td>\n",
+       "      <td>Block Island</td>\n",
+       "      <td>System Unit</td>\n",
+       "      <td>POLYGON ((-7965532.314 5045652.647, -7966687.6...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0</td>\n",
+       "      <td>D08P</td>\n",
+       "      <td>Napatree</td>\n",
+       "      <td>Otherwise Protected Area</td>\n",
+       "      <td>POLYGON ((-7999453.051 5058737.165, -7999443.4...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0</td>\n",
+       "      <td>D07</td>\n",
+       "      <td>Maschaug Ponds</td>\n",
+       "      <td>System Unit</td>\n",
+       "      <td>POLYGON ((-7995170.059 5059960.984, -7995166.8...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0</td>\n",
+       "      <td>RI-13P</td>\n",
+       "      <td>Misquamicut Beach</td>\n",
+       "      <td>Otherwise Protected Area</td>\n",
+       "      <td>POLYGON ((-7990939.688 5061881.830, -7990933.6...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Id    Unit               Name                 Unit_Type  \\\n",
+       "0   0    D09P       Block Island  Otherwise Protected Area   \n",
+       "1   0     D09       Block Island               System Unit   \n",
+       "2   0    D08P           Napatree  Otherwise Protected Area   \n",
+       "3   0     D07     Maschaug Ponds               System Unit   \n",
+       "4   0  RI-13P  Misquamicut Beach  Otherwise Protected Area   \n",
+       "\n",
+       "                                            geometry  \n",
+       "0  POLYGON ((-7969337.924 5043713.067, -7968039.5...  \n",
+       "1  POLYGON ((-7965532.314 5045652.647, -7966687.6...  \n",
+       "2  POLYGON ((-7999453.051 5058737.165, -7999443.4...  \n",
+       "3  POLYGON ((-7995170.059 5059960.984, -7995166.8...  \n",
+       "4  POLYGON ((-7990939.688 5061881.830, -7990933.6...  "
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "damage2.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "8f5d439d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['Otherwise Protected Area', 'System Unit'], dtype=object)"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "damage2.Unit_Type.unique()"
+   ]
   }
  ],
  "metadata": {
